@@ -1,7 +1,7 @@
  <!--
       (Do not remove this comment block.)
   Version: 1.7.6
-  Last modified: December 22, 2002
+  Last modified: June 13, 2003
   Maintainers: 
                Chris Lyttle <chris@wilddev.net>
   Originally written by Carol Champagne.
@@ -268,10 +268,15 @@ GnuCash doesn't hide its methods from you. If you wonder how GnuCash computed a 
 These are only a few of the advantages you'll discover when you start using GnuCash to track your financial information. Now get ready to enjoy the benefits of GnuCash for yourself!
      </para>
   </sect1>
+
   <sect1 id="install1">
    <title>Installation</title>
     <para>
-      FIXME
+Installation of GnuCash can be simple, as most modern linux distributions come with gnucash precompiled and ready to go.  In fact, most likely, GnuCash is already installed.  If you do not have GnuCash installed, the simplest method for installing it is to insert the installation CD that came with your distribution and follow the instructions.
     </para>
+    <para>
+The <ulink url="http://www.gnucash.org/"><citetitle>GnuCash home page</citetitle></ulink> contains detailed instructions on how to install GnuCash in the event your current distribution does not include it, or if you want to install a different version.  You can also read the README file in the source code.
+    </para>
+
   </sect1>
  </chapter>
