@@ -17,8 +17,8 @@
 <!ENTITY appendix SYSTEM "appendix.xml">
 <!ENTITY legal SYSTEM "legal.xml">
 <!ENTITY GFDL SYSTEM "fdl-appendix.xml">
-<!ENTITY manrevision "1.8.0">
-<!ENTITY date "2nd February 2003">
+<!ENTITY manrevision "1.8.1">
+<!ENTITY date "14th June 2003">
 <!ENTITY app "GnuCash">
 ]>
 <!--
@@ -30,8 +30,8 @@
 -->
 <!--
       (Do not remove this comment block.)
-  Version: 1.7.6
-  Last modified: Dec 22, 2002
+  Version: 1.8.1
+  Last modified: Jun 14, 2002
   Maintainers:
                Chris Lyttle   <chris@wilddev.net)
   Translators:
@@ -90,6 +90,15 @@
      </affiliation>
     </author>
     
+    <author>
+     <firstname>Jon</firstname>
+     <surname>Lapham</surname>
+     <affiliation>
+          <orgname>GnuCash Documentation Team</orgname>
+          <address> <email>lapham@extracta.com.br</email> </address>
+     </affiliation>
+    </author>
+    
 <!-- This is appropriate place for other contributors: translators,
       maintainers,  etc. Commented out by default.
        <othercredit role="translator">
@@ -109,6 +118,19 @@
       <revision>
         <revnumber>&app; Tutorial and Concepts Guide V&manrevision;</revnumber>
         <date>&date;</date>
+        <revdescription>
+          <para role="author">Chris Lyttle
+            <email>chris@wilddev.net</email>
+          </para>
+          <para role="author">Jon Lapham
+            <email>lapham@extracta.com.br</email>
+          </para>
+          <para role="publisher">GnuCash Documentation Team</para>
+        </revdescription>
+      </revision>
+      <revision>
+        <revnumber>GnuCash Tutorial and Concepts Guide V1.8.0</revnumber>
+        <date>Jan 2003</date>
         <revdescription>
           <para role="author">Chris Lyttle
             <email>chris@wilddev.net</email>
