@@ -1,3 +1,8 @@
+2003-06-14  Chris Lyttle  <chris@wilddev.net>
+	
+	* guide/C/gnucash-guide.xml: Add Jon Lapham as an author
+	* guide/C/chapter1.xml: Added Jon Lapham's patch
+
 2003-05-30  Christian Stimming  <stimming@tuhh.de>
 
 	* help/de_DE/gnucash-help.xml: Change German translation of
